crates/kirin-derive-toolkit/src/template/builder_template/snapshots/kirin_derive_toolkit__template__builder_template__helpers__tests__option_result_value_build_result.snap
---
source: crates/kirin-derive-toolkit/src/template/builder_template/helpers.rs
expression: formatted
---
#[automatically_derived]
#[doc(hidden)]
pub struct IfOp {
    pub id: Statement,
    pub result: Option<ResultValue>,
}
#[automatically_derived]
impl From<IfOp> for Statement {
    fn from(value: IfOp) -> Self {
        value.id
    }
}
