crates/kirin-derive-toolkit/src/template/builder_template/snapshots/kirin_derive_toolkit__template__builder_template__helpers__tests__single_result_value_let_name.snap
---
source: crates/kirin-derive-toolkit/src/template/builder_template/helpers.rs
expression: formatted
---
let result : ResultValue = stage . ssa () . kind (kirin_ir :: BuilderSSAKind :: Result (add_statement_id , 0usize)) . ty (Lang :: Type :: from (MyType :: placeholder ())) . new () . into () ;
