crates/kirin-derive-toolkit/src/template/builder_template/snapshots/kirin_derive_toolkit__template__builder_template__helpers__tests__vec_result_value_build_fn_inputs.snap
---
source: crates/kirin-derive-toolkit/src/template/builder_template/helpers.rs
expression: formatted
---
results_count : usize , callee : impl Into < SSAValue >
