crates/kirin-derive-toolkit/src/template/builder_template/snapshots/kirin_derive_toolkit__template__builder_template__helpers__tests__vec_result_value_build_result.snap
---
source: crates/kirin-derive-toolkit/src/template/builder_template/helpers.rs
expression: formatted
---
#[automatically_derived]
#[doc(hidden)]
pub struct Call {
    pub id: Statement,
    pub results: Vec<ResultValue>,
}
#[automatically_derived]
impl From<Call> for Statement {
    fn from(value: Call) -> Self {
        value.id
    }
}
